1999-09-11  Ian Lance Taylor  <ian@zembu.com>

	* write.c (dump_section_relocs): Call print_symbol_value_1 to
	print the symbol, rather than printing it here.

1999-09-11  Donn Terry  <donn@interix.com>

	* write.c (adjust_reloc_syms): Print adjusted fixup.

	* expr.c (integer_constant): Correct too_many_digits calculation
	in base 10 case.

1999-09-09  Andreas Schwab  <schwab@suse.de>

	* doc/c-arm.texi: Fix arguments of @var to not contain
	punctuation.

1999-09-08  Philip Blundell  <pb@nexus.co.uk>

	* config/tc-arm.c (s_thumb_set): Only support interworking for ELF 
	and COFF targets.
	(md_parse_option): Only support -k flag for ELF and COFF targets.

Tue Sep  7 13:28:59 1999  Jeffrey A Law  (law@cygnus.com)

	* config/tc-hppa.c (pa_ip): Put strict register checks before
	call to pa_parse_number.

	* config/tc-hppa.c (pa_ip): Support 'Z' argument.

1999-09-06  Ian Lance Taylor  <ian@zembu.com>

	* config/obj-coff.c: Add ATTRIBUTE_UNUSED as needed for
	BFD_ASSEMBLER code.

1999-09-06  Donn Terry  <donn@interix.com>

	* as.c (perform_an_assembly_pass): Set SEC_DATA for data_section.

Mon Sep  6 04:26:56 1999  Jeffrey A Law  (law@cygnus.com)

	* config/tc-hppa.c (pa_ip): Get strict/non-strict mode from the
	candidate instruction.  Require registers for register arguments
	when in strict mode.  Require assemble-time constants for
	constants when in strict mode.
	(pa_get_absolute_expression): Require a constant when in strict
	mode.
	
1999-09-06  Nick Clifton  <nickc@cygnus.com>

	* config/tc-m32r.c (md_longopts): Fix value for -Wnuh.

1999-09-04  Steve Chamberlain  <sac@pobox.com>

	* config/tc-pj.c: New file, supports picoJava in ELF.
	* config/tc-pj.h: Ditto.
	* configure.in (pjl*, pj*): New targets.
	* Makefile.am: Rebuild dependencies.
	(CPU_TYPES): Add pj.
	(TARGET_CPU_CFILES): Add config/tc-pj.c.
	(TARGET_CPU_HFILES): Add config/tc-pj.h.
	* doc/c-pj.texi: New file.
	* doc/as.texinfo: Add some PJ specifics.